# Antigravity_Obsidian_MCP

./: .gitignore  AI_INSTRUCTIONS.md  Cargo.toml  INSTALLATION.md  README.md
src/: main.rs  server.rs  vault.rs
