[package]
name = "obsidian_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
schemars = "0.8.21"
